Remove motd, update Immich config

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -64,3 +64,9 @@
     group: root
     validate: sshd -t -f %s
   notify: Reload sshd config
+
+- name: Remove motd
+  tags: sshd
+  file:
+    path: /etc/motd
+    state: absent
