--- a/templates/apps/immich.yml
+++ b/templates/apps/immich.yml
@@ -10,7 +10,9 @@ services:
     image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION:-release}
     command: ["start-server.sh"]
     volumes:
-      - ${IMMICH_UPLOAD_LOCATION}:/usr/src/app/upload
+      - ${IMMICH_DATA_LOCATION}:/usr/src/app/upload
+      - ${IMMICH_AVEN_UPLOAD_LOCATION}:/usr/src/app/upload/library/aven
+      - ${IMMICH_IMPORT_LOCATION}:/mnt/aven:ro
     env_file:
       - .env
     depends_on:
@@ -27,7 +29,9 @@ services:
     image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION:-release}
     command: ["start-microservices.sh"]
     volumes:
-      - ${IMMICH_UPLOAD_LOCATION}:/usr/src/app/upload
+      - ${IMMICH_DATA_LOCATION}:/usr/src/app/upload
+      - ${IMMICH_AVEN_UPLOAD_LOCATION}:/usr/src/app/upload/library/aven
+      - ${IMMICH_IMPORT_LOCATION}:/mnt/aven:ro
     env_file:
       - .env
     depends_on:
@@ -43,7 +47,9 @@ services:
     container_name: immich_machine_learning
     image: ghcr.io/immich-app/immich-machine-learning:${IMMICH_VERSION:-release}
     volumes:
-      - ${IMMICH_UPLOAD_LOCATION}:/usr/src/app/upload
+      - ${IMMICH_DATA_LOCATION}:/usr/src/app/upload
+      - ${IMMICH_AVEN_UPLOAD_LOCATION}:/usr/src/app/upload/library/aven
+      - ${IMMICH_IMPORT_LOCATION}:/mnt/aven:ro
       - /ssd/app/immich/ml_cache:/cache
     env_file:
       - .env
@@ -113,8 +119,8 @@ services:
       - immich-server
     restart: unless-stopped
 
-    ports:
-      - 2283:8080
+    # ports:
+    #   - 2283:8080
 
     networks:
       immich:
