--- a/inventory.yml
+++ b/inventory.yml
@@ -8,13 +8,13 @@ all:
         seedling:
         jj:
         arch-dev:
-        smtp:
     docker:
       hosts:
         apps:
         dmz-apps:
         seedling:
-        # smtp:
+        blog:
+          ansible_host: "{{ secondary_domain }}"
     nfs_clients:
       hosts:
         apps:
