Generalize backblaze backup task

--- a/files/draco/excludes.conf
+++ b/files/draco/excludes.conf
@@ -12,6 +12,7 @@ node_modules/
 /deluge/
 /mosquitto/
 
-# Exclude databases and redownloadable files
+# Exclude databases, caches, and redownloadable files
 /mariadb/data/
 /nextcloud/config/
+/immich/ml_cache/
