--- a/roles/backblaze/tasks/main.yml
+++ b/roles/backblaze/tasks/main.yml
@@ -18,7 +18,7 @@
 - name: Configure rclone
   tags: config, rclone
   copy:
-    src: rclone.conf
+    src: "{{ inventory_hostname }}/rclone.conf"
     dest: /root/.config/rclone/rclone.conf
     mode: "0600"
 
@@ -32,7 +32,7 @@
 - name: Configure backup script
   tags: config, rclone
   copy:
-    src: excludes.conf
+    src: "{{ inventory_hostname }}/excludes.conf"
     dest: /root/.config/backblaze/
     mode: "0600"
 
