--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -54,6 +54,12 @@
     - root
     - "{{ user }}"
 
+- name: Set timezone
+  tags: config, tz
+  timezone:
+    name: "{{ timezone }}"
+  notify: Restart cron
+
 - name: Set sshd config
   tags: sshd
   template:
@@ -63,7 +69,7 @@
     owner: root
     group: root
     validate: sshd -t -f %s
-  notify: Reload sshd config
+  notify: Restart sshd
 
 - name: Remove motd
   tags: sshd
