Add Peertube, refactor blog & apps env files

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -33,14 +33,27 @@
   with_fileglob:
     - ../templates/{{ inventory_hostname }}/*.yml
 
-- name: Copy .env
+- name: Copy .env files
   tags: docker, compose, env
   copy:
-    src: "{{ inventory_hostname }}.env"
-    dest: "{{ compose_dir }}.env"
+    src: "{{ item }}"
+    dest: "{{ compose_dir }}/{{ item | basename }}"
     mode: "0440"
     owner: root
     group: docker
+  with_fileglob:
+    - ../files/{{ inventory_hostname }}/docker_env/*.env
+
+
+- name: Copy compose .env
+  tags: docker, compose, env
+  copy:
+    src: "../files/{{ inventory_hostname }}/docker_env/compose_env"
+    dest: "{{ compose_dir }}/.env"
+    mode: "0440"
+    owner: root
+    group: docker
+
 
 - name: Pull docker services
   tags: docker, compose, pull
