--- a/templates/apps/immich.yml
+++ b/templates/apps/immich.yml
@@ -14,7 +14,7 @@ services:
       - ${IMMICH_AVEN_UPLOAD_LOCATION}:/usr/src/app/upload/library/aven
       - ${IMMICH_IMPORT_LOCATION}:/mnt/aven:ro
     env_file:
-      - .env
+      - immich.env
     depends_on:
       - redis
       - database
@@ -33,7 +33,7 @@ services:
       - ${IMMICH_AVEN_UPLOAD_LOCATION}:/usr/src/app/upload/library/aven
       - ${IMMICH_IMPORT_LOCATION}:/mnt/aven:ro
     env_file:
-      - .env
+      - immich.env
     depends_on:
       - redis
       - database
@@ -52,7 +52,7 @@ services:
       - ${IMMICH_IMPORT_LOCATION}:/mnt/aven:ro
       - /ssd/app/immich/ml_cache:/cache
     env_file:
-      - .env
+      - immich.env
     networks:
       immich:
     restart: unless-stopped
@@ -62,7 +62,7 @@ services:
     container_name: immich_web
     image: ghcr.io/immich-app/immich-web:${IMMICH_VERSION:-release}
     env_file:
-      - .env
+      - immich.env
     networks:
       immich:
     restart: unless-stopped
@@ -72,8 +72,9 @@ services:
     container_name: immich_typesense
     image: typesense/typesense:0.24.0
     environment:
-      - TYPESENSE_API_KEY=${TYPESENSE_API_KEY}
       - TYPESENSE_DATA_DIR=/data
+    env_file:
+      - immich.env
     logging:
       driver: none
     networks:
@@ -95,11 +96,8 @@ services:
     container_name: immich_postgres
     image: postgres:14
     env_file:
-      - .env
+      - immich.env
     environment:
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_DB: ${DB_DATABASE_NAME}
       PG_DATA: /var/lib/postgresql/data
     networks:
       immich:
@@ -118,9 +116,6 @@ services:
     depends_on:
       - immich-server
     restart: unless-stopped
-
-    # ports:
-    #   - 2283:8080
 
     networks:
       immich:
