Add pipelining, update .gitconfig

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,6 +4,7 @@ vars_plugins = ~/.ansible/plugins/vars
 nocows = 1
 vault_password_file = vault-keyring-client.py
 vault_identity = ansible
+pipelining = True
 
 # Needed for SSH agent forwarding, used to clone git repos
 # https://stackoverflow.com/questions/24124140/ssh-agent-forwarding-with-ansible
