--- a/templates/dmz-apps/web.yml
+++ b/templates/dmz-apps/web.yml
@@ -34,6 +34,8 @@ services:
     container_name: forward_auth
     image: mesosphere/traefik-forward-auth:latest
     restart: unless-stopped
+    env_file:
+      - forward_auth.env
 
     depends_on:
       - traefik
@@ -43,10 +45,8 @@ services:
       - web
 
     environment:
-      SECRET: ${FORWARD_AUTH_SECRET}
       PROVIDER_URI: https://kc.{{ primary_domain }}/realms/dmz
       CLIENT_ID: traefik
-      CLIENT_SECRET: ${FORWARD_AUTH_CLIENT_SECRET}
 
     labels:
       traefik.enable: true
@@ -62,64 +62,13 @@ services:
       traefik.http.middlewares.traefik-forward-auth.forwardauth.authResponseHeaders: X-Forwarded-User
       traefik.http.middlewares.traefik-forward-auth.forwardauth.trustForwardHeader: true
 
-  # Google Docs for markdown documents
-  hedgedoc:
-    image: lscr.io/linuxserver/hedgedoc:latest
-    container_name: hedgedoc
-    restart: unless-stopped
-
-    depends_on:
-      - traefik
-      - forward_auth
-
-    environment:
-      PUID: 2010
-      PGID: 2010
-      TZ: {{ timezone }}
-      CMD_DOMAIN: hd.{{ primary_domain }}
-      CMD_PROTOCOL_USESSL: true
-      CMD_ALLOW_ORIGIN: "[hd.{{ primary_domain }}]"
-      CMD_ALLOW_ANONYMOUS: false # no guest usage
-      CMD_DEFAULT_PERMISSION: limited # default new notes to only viewable by logged-in users
-      CMD_EMAIL: false # don't allow signing in with email/password - only Keycloak
-
-      # Keycloak SSO configuration
-      CMD_OAUTH2_USER_PROFILE_URL: https://kc.{{ primary_domain }}/realms/dmz/protocol/openid-connect/userinfo
-      CMD_OAUTH2_USER_PROFILE_USERNAME_ATTR: preferred_username
-      CMD_OAUTH2_USER_PROFILE_DISPLAY_NAME_ATTR: name
-      CMD_OAUTH2_USER_PROFILE_EMAIL_ATTR: email
-      CMD_OAUTH2_TOKEN_URL: https://kc.{{ primary_domain }}/realms/dmz/protocol/openid-connect/token
-      CMD_OAUTH2_AUTHORIZATION_URL: https://kc.{{ primary_domain }}/realms/dmz/protocol/openid-connect/auth
-      CMD_OAUTH2_CLIENT_ID: hedgedoc # from Keycloak
-      CMD_OAUTH2_CLIENT_SECRET: ${HEDGEDOC_OAUTH2_CLIENT_SECRET} # from Keycloak
-      CMD_OAUTH2_PROVIDERNAME: {{ primary_domain }} # display name
-      # Per here https://shivering-isles.com/fixing-hedgedoc-profile-info-keycloak-20
-      CMD_OAUTH2_SCOPE: "openid email profile"
-
-    volumes:
-      - /ssd/dmz/app/hedgedoc:/config
-
-    networks:
-      - web
-
-    labels:
-      traefik.enable: true
-      traefik.http.routers.hd.rule: Host(`hd.{{ primary_domain }}`)
-      traefik.http.routers.hd.entrypoints: https
-      traefik.http.routers.hd.tls.certresolver: default
-      traefik.http.services.hd.loadbalancer.server.port: 3000
-      # Require keycloak sign-in to access any pages
-      traefik.http.routers.hd.middlewares: traefik-forward-auth
-
-
   mariadb:
     container_name: mariadb
     image: mariadb:10
     restart: unless-stopped
     user: 2010:2010
-
-    environment:
-      MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
+    env_file:
+      - mariadb.env
     
     volumes:
       - /ssd/dmz/app/mariadb:/var/lib/mysql
@@ -136,6 +85,8 @@ services:
     image: quay.io/keycloak/keycloak:latest
     restart: unless-stopped
     command: start --log=console,gelf --log-gelf-host=10.0.0.5 --log-gelf-port=12201
+    env_file:
+      - keycloak.env
 
     # Since Keycloak can send its own logs to our log server, we don't need it
     # to also send logs there via Docker's default GELF facility
@@ -153,7 +104,6 @@ services:
       KC_DB_URL_PORT: 3306
       KC_DB_URL_DATABASE: keycloak
       KC_DB_USERNAME: keycloak
-      KC_DB_PASSWORD: ${KC_DB_PASSWORD}
       # Not needed after initial setup
       # KEYCLOAK_ADMIN: 
       # KEYCLOAK_ADMIN_PASSWORD:
@@ -184,113 +134,3 @@ services:
       # Apply an IP-based whitelist to the admin router, preventing internet access
       traefik.http.routers.kc-admin.middlewares: kc-admin-ipwhitelist
       traefik.http.middlewares.kc-admin-ipwhitelist.ipwhitelist.sourcerange: "10.0.0.0/8"
-
-
-  directus:
-    container_name: directus
-    image: directus/directus:latest
-    restart: unless-stopped
-    ports:
-      - 8055:8055
-
-    volumes:
-      - /ssd/dmz/app/directus:/directus/database
-
-    networks:
-      - web
-      
-    environment:
-      PUBLIC_URL: https://dr.dev.{{ secondary_domain }}/
-      TELEMETRY: false
-      KEY: ${DIRECTUS_KEY}
-      SECRET: ${DIRECTUS_SECRET}
-      DB_CLIENT: sqlite3
-      DB_FILENAME: ./database/data.db
-      
-      # SSO with Keycloak
-      AUTH_DISABLE_DEFAULT: true
-      AUTH_PROVIDERS: keycloak
-      AUTH_KEYCLOAK_DRIVER: openid
-      AUTH_KEYCLOAK_CLIENT_ID: directus
-      AUTH_KEYCLOAK_CLIENT_SECRET: ${DIRECTUS_AUTH_KEYCLOAK_CLIENT_SECRET}
-      AUTH_KEYCLOAK_ISSUER_URL: https://kc.{{ primary_domain }}/realms/dmz/.well-known/openid-configuration
-      AUTH_KEYCLOAK_IDENTIFIER_KEY: email
-
-    labels:
-      traefik.enable: true
-      # Create service
-      traefik.http.services.dr-service.loadbalancer.server.port: 8055
-      # No Keycloak needed for general APi access
-      traefik.http.routers.dr.rule: Host(`dr.dev.{{ secondary_domain }}`)
-      traefik.http.routers.dr.service: dr-service
-      traefik.http.routers.dr.entrypoints: https
-      traefik.http.routers.dr.tls.certresolver: default
-      # Require Keycloak to access any admin resources
-      traefik.http.routers.dr-admin.rule: (Host(`dr.dev.{{ secondary_domain }}`) && PathPrefix(`/admin`))
-      traefik.http.routers.dr-admin.service: dr-service
-      traefik.http.routers.dr-admin.entrypoints: https
-      traefik.http.routers.dr-admin.tls.certresolver: default
-      traefik.http.routers.dr-admin.middlewares: traefik-forward-auth
-
-  ghost_dev:
-    container_name: ghost_dev
-    image: ghost:5
-    restart: unless-stopped
-    # Without this, it tries to chmod and fails
-    user: 2010:2010
-
-    networks:
-      - web
-
-    volumes:
-      - /ssd/dmz/app/ghost/dev:/var/lib/ghost/content
-
-    environment:
-      url: https://dev.{{ secondary_domain }}
-
-      # In dev, a SQLite DB is acceptable
-      database__connection__filename: /var/lib/ghost/content/data/ghost.db
-      NODE_ENV: development
-
-      # Mail
-      mail__transport: SMTP
-      mail__from: support@{{ secondary_domain }}
-      mail__options__host: smtp.mailgun.org
-      mail__options__port: 465
-      mail__options__secure: true
-      mail__options__auth__user: postmaster@mail.{{ secondary_domain }}
-      mail__options__auth__pass: ${GHOST_SMTP_PASS}
-
-    labels:
-      traefik.enable: true
-      traefik.http.routers.gh_dev.rule: Host(`dev.{{ secondary_domain }}`)
-      traefik.http.routers.gh_dev.entrypoints: https
-      traefik.http.routers.gh_dev.tls.certresolver: default
-      # Require keycloak sign-in to access any pages
-      # I'll porobably toggle this on and off as needed when modifying the code
-      # on an unmodified codebase, private site mode is good enough
-      # traefik.http.routers.gh_dev.middlewares: traefik-forward-auth
-
-  nginx_dev:
-    container_name: nginx_dev
-    image: nginxinc/nginx-unprivileged
-    user: "2020"
-    restart: unless-stopped
-
-    depends_on:
-      - traefik
-      - forward_auth
-
-    volumes:
-      - /ssd/dmz/app/nginx:/usr/share/nginx/html:ro
-
-    networks:
-      - web
-    
-    labels:
-      traefik.enable: true
-      traefik.http.routers.ng_dev.rule: (Host(`dev.{{ secondary_domain }}`) && PathPrefix(`/static`))
-      traefik.http.routers.ng_dev.entrypoints: https
-      traefik.http.routers.ng_dev.tls.certresolver: default
-      # Require keycloak sign-in to access any pages
-      # traefik.http.routers.ng_dev.middlewares: traefik-forward-auth
