--- a/templates/lyra/graylog.yml
+++ b/templates/lyra/graylog.yml
@@ -30,16 +30,18 @@ services:
     container_name: graylog
     image: "graylog/graylog:4.3"
     restart: unless-stopped
+    env_file:
+      - graylog.env
+
     depends_on:
       elasticsearch:
         condition: "service_started"
       mongodb:
         condition: "service_started"
+      
     entrypoint: "/usr/bin/tini -- wait-for-it elasticsearch:9200 --  /docker-entrypoint.sh"
     environment:
       GRAYLOG_NODE_ID_FILE: "/usr/share/graylog/data/config/node-id"
-      GRAYLOG_PASSWORD_SECRET: ${GRAYLOG_PASSWORD_SECRET}
-      GRAYLOG_ROOT_PASSWORD_SHA2: ${GRAYLOG_ROOT_PASSWORD_SHA2}
       GRAYLOG_HTTP_BIND_ADDRESS: "0.0.0.0:9000"
       GRAYLOG_HTTP_EXTERNAL_URI: "http://lyra:9000/"
       GRAYLOG_ELASTICSEARCH_HOSTS: "http://elasticsearch:9200"
