--- a/roles/dotfiles_clone/tasks/main.yml
+++ b/roles/dotfiles_clone/tasks/main.yml
@@ -1,32 +1,11 @@
 ---
-# Needed so that our user can access the SSH agent, using credentials passed
-# from the ansible control host to authenticate to the git repo
-- name: Enable SSH agent forwarding with sudo
-  tags: config, dots
-  lineinfile:
-    dest: /etc/sudoers
-    insertafter: ^#?\s*Defaults\s+env_keep\b
-    line: Defaults    env_keep += "SSH_AUTH_SOCK"
-
-- name: Change SSH agent socket owner to {{ user }}
-  tags: config, dots, dotclone
-  changed_when: false # no way to distinguish changed/unchanged
-  command:
-    cmd: bash -c 'chown -R {{ user }} /tmp/ssh-XXXX*'
-
 - name: Clone dotfiles
   tags: config, dots, dotclone
   become: true
   become_user: "{{ user }}"
   git:
-    repo: ssh://git@gt.{{ primary_domain }}:1108/subract/dotfiles.git # noqa latest
+    repo: https://gt.{{ primary_domain }}/subract/dotfiles.git # noqa latest
     dest: /home/{{ user }}/.dotfiles
-
-- name: Revert SSH agent socket owner
-  tags: config, dots,dotclone
-  changed_when: false # no way to distinguish changed/unchanged
-  command:
-    cmd: bash -c 'chown -R root /tmp/ssh-XXXX*'
 
 - name: Symlink dots
   tags: config, dots
