Fix output formatting

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,6 +5,7 @@ nocows = 1
 vault_password_file = vault-keyring-client.py
 vault_identity = ansible
 pipelining = True
+stdout_callback = debug
 
 # Needed for SSH agent forwarding, used to clone git repos
 # https://stackoverflow.com/questions/24124140/ssh-agent-forwarding-with-ansible
