Rename packages.yml, disable SSH agent forwarding

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,4 +10,4 @@ stdout_callback = debug
 # Needed for SSH agent forwarding, used to clone git repos
 # https://stackoverflow.com/questions/24124140/ssh-agent-forwarding-with-ansible
 [ssh_connection]
-ssh_args=-o ControlMaster=auto -o ControlPersist=60s -o ControlPath=/tmp/ansible-ssh-%h-%p-%r -o ForwardAgent=yes
+ssh_args=-o ControlMaster=auto -o ControlPersist=60s -o ControlPath=/tmp/ansible-ssh-%h-%p-%r
