--- a/roles/arch_workstation/tasks/main.yml
+++ b/roles/arch_workstation/tasks/main.yml
@@ -35,7 +35,7 @@
     state: started
 
 - name: Install packages
-  include_tasks: packages.yaml
+  include_tasks: packages.yml
 
 - name: Enable and start services
   tags: pkg
