Configure nfs, tweak networking

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -23,6 +23,7 @@
     - name: Ensure sudo group has privs
       tags: groups
       lineinfile:
+        regexp: sudo.*ALL
         line: "%sudo ALL=(ALL:ALL) ALL"
         path: /etc/sudoers
 
