--- a/roles/pve_networking/tasks/main.yml
+++ b/roles/pve_networking/tasks/main.yml
@@ -4,6 +4,7 @@
     name: bridge-utils
 
 - name: Configure /etc/network/interfaces
+  tags: config, net
   template:
     src: "{{ inventory_hostname }}/pve_networking/interfaces.j2"
     dest: /etc/network/interfaces
@@ -11,6 +12,7 @@
   notify: Reload network interfaces
 
 - name: Configure /etc/resolv.conf
+  tags: config, net
   template:
     src: "{{ inventory_hostname }}/pve_networking/resolv.conf.j2"
     dest: /etc/resolv.conf
