--- a/roles/arch_workstation/tasks/packages.yml
+++ b/roles/arch_workstation/tasks/packages.yml
@@ -79,6 +79,7 @@
       - wireshark-qt # protocol analyzer
       - xorg-xev # view key events
       - zip # zips
+      - zsh-completions # more zsh completions
 
       # Helpers and styling
       - ansible-lint # ansible linting
