Add app01, new MC, miniflux, MacOS vault, etc

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,8 +2,9 @@
 inventory = inventory.yml
 vars_plugins = ~/.ansible/plugins/vars
 nocows = 1
-vault_password_file = vault-keyring-client.py
-vault_identity = ansible
+# vault_password_file = vault-keyring-client.py
+# vault_identity = ansible
+vault_password_file = get_macos_vaultpw.sh
 pipelining = True
 stdout_callback = debug
 
