--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -57,7 +57,7 @@
 
 - name: Set timezone
   tags: config, tz
-  timezone:
+  community.general.timezone:
     name: "{{ timezone }}"
   notify: Restart cron
 
