--- a/roles/zfs/tasks/main.yml
+++ b/roles/zfs/tasks/main.yml
@@ -22,3 +22,11 @@
     block: |-
       options zfs zfs_arc_max=8589934592
       options zfs zfs_arc_min=2147483648
+
+- name: Configure filesystems
+  tags: config, zfs
+  community.general.zfs:
+    name: "{{ app_root | regex_replace('^/', '') }}" # Strip leading slash
+    state: present
+    extra_zfs_properties:
+      sharenfs: rw=app01.{{ tailscale_magic_dns }},no_root_squash
